--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "firebase": "^5.4.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-sidenav": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
